--- a/03-gifs-app/package.json
+++ b/03-gifs-app/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
+    "@vitest/coverage-v8": "^4.0.16",
     "axios-mock-adapter": "^2.1.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
