--- a/04-hooks-app/package.json
+++ b/04-hooks-app/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.1.18",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^25.0.10",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
