--- a/04-hooks-app/package.json
+++ b/04-hooks-app/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.563.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "zod": "^4.3.6"
